--- a/_publications/2025/2025-GMAT.md
+++ b/_publications/2025/2025-GMAT.md
@@ -2,7 +2,7 @@
 title: "GMAT: Grounded Multi-Agent Clinical Description Generation for Text Encoder in Vision-Language MIL for Whole Slide Image Classification"
 date: 2025-08-14 00:01:00 +0800
 selected: true
-pub: "ELAMI Workshop @ the International Conference on Medical Image Computing and Computer-Assisted Intervention (MICCAI)"
+pub: "ELAMI Workshop @ the International Conference on Medical Image Computing and Computer-Assisted Intervention (MICCAI), "
 # pub_pre:        "Submitted to "
 # pub_post:       'Under review.'
 # pub_last: ' <span class="badge badge-pill badge-publication badge-success">Spotlight</span>'
